--- a/efb-admin/efb-admin.csproj
+++ b/efb-admin/efb-admin.csproj
@@ -174,6 +174,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202203150325194_InitialCreate.cs" />
+    <Compile Include="Migrations\202203150325194_InitialCreate.Designer.cs">
+      <DependentUpon>202203150325194_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AppModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -256,6 +261,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202203150325194_InitialCreate.resx">
+      <DependentUpon>202203150325194_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
